traefik-1.7/08-ingress.yaml
# =========================================================
# Traefik Ingress Controller incl. Traefik - Ingress configuration
# =========================================================
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: traefik-ingress
  namespace: traefik-namespace
spec:
  rules:
  - host: customdomain-example.com 
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: admin
        path: /
